# vcounter

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
conf/: .env.docker  .env.sample  config.docker.yaml  config.sample.yaml
deployment/docker/: entrypoint.sh
deployment/k8s/local/: build.sh
deployment/k8s/local/redis/: deployment.yml  service.yml
deployment/k8s/local/vcount/: deployment.sample.yml  ingress.yml  namespace.yml  service.yml
deployment/k8s/remote/: readme.md
docs/deploy/: deployment.md
docs/testing/: readme.md
tests/: stress.py  test_web_server.py
vcounter/: __init__.py  entities.py  helper.py  server.py
vcounter/lib/: config.py  db.py  logger.py
